tests/negative/invalid_initializer.c
int main(void) { int x[1] = {1, 2}; return x[0]; }
